--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-	<link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
+	<link type="text/css" rel="stylesheet" href="/views/stylesheets/main.css" />
 	<title>Pint</title>
   </head>
   <body>	
