Ajout d'une liste des gens qui suivent nos messages, (liste récupérée depuis les listes des suivis des autres contacts). Ajout d'une redirection vers la page d'accueil lors de l'accès à la page de settings par une personne mal intentionnée. ^^ Ajout d'une vérification de disponibilité de nickname lors du changement de celui-ci.

--- a/views/account_settings.html
+++ b/views/account_settings.html
@@ -42,9 +42,16 @@
 					</div>
 					<div class="content">
 						<div>
-							<p>Followed Friend</p>
-							{% for friend in followed %}
+							<h4>Following</h4>
+							{% for friend in following %}
 								<a>{{ friend.nickname }}</a>
+								<br>
+							{% endfor %}
+						</div>
+						<div>
+							<h4>They follow you</h4>
+							{% for user in followed_by %}
+								<a>{{ user.nickname }}</a>
 								<br>
 							{% endfor %}
 						</div>
