La recherche rend l'utilisateur demandé à la casse près; donc mise en place d'une page de profil par utilisateur. (histoire que la recherche serve à quelque chose...) Ce qui induit plein de lien vers la page du profil à chaque fois qu'on voit un nom d'utilisateur... Le style de la page en question sera à revoir.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -74,6 +74,13 @@ body
 	padding-bottom: 20px;
 }
 
+#maincontent h2
+{
+	text-align: right;
+	margin-right: 15px;
+	color: #FF7F2A;
+}
+
 #rightnav
 {
 	float: left;
