--- a/stylesheets/frame.css
+++ b/stylesheets/frame.css
@@ -5,14 +5,16 @@ body
 	padding: 0;
 	margin: 0;
 	
-	font-family: arial;
+	font: 0.8em/1.5 arial; 
 }
 
 #topbox
 {
+	width: 750px;
 	text-align: left;
 	margin: auto;
-	padding: 0.5em 2em;
+	padding: 0.5em 2em 0 2em;
+	position: relative;
 }
 
 #topbox #title h1
@@ -24,25 +26,75 @@ body
 
 #topbox #title cite
 {
+	display: inline;
 	font-size: large;
 	font-style: italic;
+	padding-bottom: 5px;
 }
 
-#topbox ul#userbox
+#topbox ul#userbox, #topbox ul#userbox li
 {
 	margin: 0;
+	margin-right: 1em;
 	padding: 0;
-	float: right;
-}
-
-#topbox ul#userbox li
-{
 	display: inline;
-	margin: 0 5px;
+	list-style-type: none;
+}
+#topbox ul#userbox
+{
+	position: absolute;
+	bottom: 3px;
+	right: 10px;	
 }
 
 #topbox ul#userbox li a
 {
-	border-bottom: 2px;
-	padding-bottom: 3px;
+	border-bottom-width: 3px;
+	border-bottom-style: solid;
+	padding-bottom: 5px;
+	text-decoration: none;
+}
+
+#mainbox
+{
+	width: 800px;
+	margin: auto;
+}
+
+#mainbox #leftcolumn
+{
+	float: left;
+	width: 210px;
+	margin-right: 5px;
+	margin-bottom: 5px;	
+}
+
+#mainbox #leftcolumn div
+{
+	margin: 0 10px 10px 0;
+	padding: 10px 10px 3px 10px;
+}
+
+#mainbox #leftcolumn div .title h3
+{
+	margin: 0;
+}
+
+#mainbox #leftcolumn div .content
+{
+	padding: 0 10px;
+}
+
+#mainbox #maincolumn
+{
+	margin-top: 0.3em;
+	padding: 1em;
+}
+
+#mainbox #footbox
+{
+	text-align: center;
+	margin-top: 0.3em;
+	margin-left: 220px;
+	font-size: x-small;
 }
