General restructuring to more resemble an MVC framework.

--- a/views/maintenance.html
+++ b/views/maintenance.html
@@ -7,7 +7,7 @@
 	<meta name="Content-language" content="en"/>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <title>PINT</title> 
-	<link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
+	<link type="text/css" rel="stylesheet" href="/stylesheets/frame.css" />
 </head>
 <body>
 	<div id="mainbox">
