--- a/views/index.html
+++ b/views/index.html
@@ -1,42 +1,34 @@
 {% extends "base.html" %}
 
 	{% block leftblocs %}
-        {% ifequal user_status "unregistered" %}
+        {% ifequal nickname '' %}
 		<div>
 			<div class="title">
-				<h3>Ah! A newcomer!</h3>
+				<h3>Greatings anonymous!</h3>
 			</div>
 			<div class="content">
-				<p>And what name do you go by?</p>
+				<p>We don't know who you are, would you care to log in?</p>
 			</div>
 		</div>
-        {% endifequal %}
-        {% ifequal msg_num 0 %}
-		<div>
-			<div class="title">
-				<h3>Ow! No messages!</h3>
+        {% else %}
+			{% ifequal msg_num 0 %}
+			<div>
+				<div class="title">
+					<h3>Ow! No messages!</h3>
+				</div>
+				<div class="content">
+					<p>Looks like you don't have anything to read...</p>
+					<p>Try following someone :)</p>
+				</div>
 			</div>
-			<div class="content">
-				<p>Looks like you don't have anything to read...</p>
-                <p>Are you actually following anything?</p>
-			</div>
-		</div>
-       {% endifequal %}
+		   {% endifequal %}
+		{% endifequal %}
   	{% endblock %}
 	
 	{% block main %}
-        {% ifnotequal user_status "anon" %}
-            {% ifequal user_status "unregistered" %}
-            <form action="/register" method="post" class="composer">
-                <div class="msgbox">
-                    <input name="nickname" type="text" value="Nickname">
-                    <input type="submit" value="ok">
-					<div class="note">
-						<p>This nickname must be at least 3 characters long, and is used only as a public identifier on this site.</p>
-					</div>
-                </div>
-            </form>
-            {% else %}
+        {% ifnotequal nickname '' %}
+			<h2>Greatings {{ nickname }}!</h2>
+			<p>Take a look at the latest posts, or write one of your own!</p>
             <div class="composer">
                 <ul class="composer_controls">
                     <li><a href="/compose?mode=text" class="compose_text" {% ifequal composer_mode "text" %}id="current_composer"{% endifequal %}>text</a></li>
@@ -69,7 +61,9 @@
                     {% endifequal %}
                 </div>
             </div>
-            {% endifequal %}
+		{% else %}
+			<h2>Welcome to Pint!</h2>
+			<p>Here's what people have been posting recently:</p>
         {% endifnotequal %}
     
         {% for message in messages %}
