Fixed favicon. Added basic Last.fm authorisation and API interface. Added image upload capacity.

--- a/views/base.html
+++ b/views/base.html
@@ -29,7 +29,7 @@
 		</ul>
 		<div class="title">
 			<h1>Pint</h1>
-			<cite>&#8220;Share and enjoy!&#8221;</cite>
+			<cite>Beta! &#8220;Can I haz bugs?&#8221;</cite>
 		</div>
 	</div>
 	<div id="mainbox">
